# particle-to-grid

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cstone/include/cstone/cuda/: CMakeLists.txt
cstone/include/cstone/focus/: CMakeLists.txt  rebalance_gpu.cu
cstone/include/cstone/halos/: CMakeLists.txt
cstone/include/cstone/primitives/: CMakeLists.txt
cstone/include/cstone/sfc/: CMakeLists.txt
cstone/include/cstone/traversal/: CMakeLists.txt
cstone/include/cstone/tree/: CMakeLists.txt
main/cmake/: particleToGrid_add_test.cmake
main/src/: CMakeLists.txt  mesh.cu  mesh.hpp  particle-to-grid.cpp
main/src/p2g/: config.hpp  interpolation_method.hpp  run.cpp  run.hpp  types.hpp  utils.hpp
main/test/: CMakeLists.txt  file_io_tests.cpp  interpolation_tests.cpp  mesh_tests.cpp
scripts/: read_pkdgrav.py  read_tipsy.py
